--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
         <div><a href="#"><img src="./images/9.gif" alt="9"></a></div>
         <div><a href="#"><img src="./images/10.jpg" alt="10"></a></div>
         <div><a href="#"><img src="./images/11.jpg" alt="11"></a></div>
+        <div><a href="#"><img src="./images/12.jpg" alt="12"></a></div>
+        <div><a href="#"><img src="./images/13.jpg" alt="13"></a></div>
+        <div><a href="#"><img src="./images/14.jpg" alt="14"></a></div>
+        <div><a href="#"><img src="./images/15.jpg" alt="15"></a></div>
+        <div><a href="#"><img src="./images/16.jpg" alt="16"></a></div>
     </div>
 </body>
 
